--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -156,11 +156,10 @@ CurrentPosGridSize=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/_Main/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
-OpenAssetsAtExit=/Game/_Main/Widgets/BPI_CrosshairUI.BPI_CrosshairUI
-OpenAssetsAtExit=/Game/_Main/Widgets/Crosshair_HUD.Crosshair_HUD
+OpenAssetsAtExit=/Game/_Main/Zombie/BP_Zombie.BP_Zombie
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -177,7 +176,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=234.400 Y=108.800
-WindowSize=X=1323.200 Y=763.200
+WindowSize=X=1326.400 Y=766.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1230,7 +1229,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Main/Widgets
+ContentBrowserDrawer.SelectedPaths=/Game/_Main/Zombie/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1285,26 +1284,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/_Main/Widgets/Crosshair_HUD
-MRUItem1=/Game/_Main/Widgets/BPI_CrosshairUI
-MRUItem2=/Game/_Main/Blueprints/BP_FirstPersonCharacter
-MRUItem3=/Game/_Main/Widgets/MainWidget_W
-MRUItem4=/Game/_Main/Blueprints/NewWidgetBlueprint
-MRUItem5=/Game/_Main/Character/Animations/IdleWalkBS
-MRUItem6=/Game/_Main/Character/Animations/FPSAnimBP
-MRUItem7=/Game/_Main/Character/Arms_Skeleton
-MRUItem8=/Game/_Main/Zombie/Animations/zombie_attack
-MRUItem9=/Game/_Main/Zombie/Animations/ZombieAnimBP
-MRUItem10=/Game/_Main/Zombie/BP_Zombie
-MRUItem11=/Game/_Main/Zombie/Animations/ZombieBS
-MRUItem12=/Game/_Main/Zombie/zombiegirl
-MRUItem13=/Game/_Main/Zombie/ZombieGirl_Material_ncl1_2
-MRUItem14=/Game/_Main/Zombie/ZombieGirl_Material_ncl1_1
-MRUItem15=/Game/_Main/Zombie/ZombieGirl_Material
-MRUItem16=/Game/_Main/Character/Animations/IdleToAim
-MRUItem17=/Game/_Main/Character/Animations/IdleFIre
-MRUItem18=/Game/_Main/Character/Animations/AimFire
-MRUItem19=/Game/MilitaryWeapSilver/Weapons/Animations/Fire_Pistol_W
+MRUItem0=/Game/_Main/Zombie/Animations/Zombie_Reaction_Hit_mixamo_com_Montage
+MRUItem1=/Game/_Main/Zombie/Animations/ZombieAnimBP
+MRUItem2=/Game/_Main/Zombie/Animations/Zombie_Reaction_Hit_mixamo_com
+MRUItem3=/Game/_Main/Zombie/Animations/zombie_dying_Montage
+MRUItem4=/Game/_Main/Zombie/Animations/zombie_dying
+MRUItem5=/Game/_Main/Zombie/Animations/zombie_death
+MRUItem6=/Game/_Main/Zombie/BP_Zombie
+MRUItem7=/Game/_Main/Widgets/Crosshair_HUD
+MRUItem8=/Game/_Main/Widgets/BPI_CrosshairUI
+MRUItem9=/Game/_Main/Blueprints/BP_FirstPersonCharacter
+MRUItem10=/Game/_Main/Widgets/MainWidget_W
+MRUItem11=/Game/_Main/Blueprints/NewWidgetBlueprint
+MRUItem12=/Game/_Main/Character/Animations/IdleWalkBS
+MRUItem13=/Game/_Main/Character/Animations/FPSAnimBP
+MRUItem14=/Game/_Main/Character/Arms_Skeleton
+MRUItem15=/Game/_Main/Zombie/Animations/zombie_attack
+MRUItem16=/Game/_Main/Zombie/Animations/ZombieBS
+MRUItem17=/Game/_Main/Zombie/zombiegirl
+MRUItem18=/Game/_Main/Zombie/ZombieGirl_Material_ncl1_2
+MRUItem19=/Game/_Main/Zombie/ZombieGirl_Material_ncl1_1
 
 [DetailCategories]
 BP_FirstPersonCharacter_C.TransformCommon=True
@@ -2241,6 +2240,30 @@ UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
 K2Node_InputAction.Input=True
+Crosshair_HUD_C.Default=True
+AnimMontage.Animation=True
+AnimMontage.BlendOption=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.Animation Model=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
+EditorCompositeSection.Section=True
+EditorCompositeSection.AnimLink=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_SaveCachedPose.Functions=True
+AnimGraphNode_SaveCachedPose.Tag=True
+AnimGraphNode_UseCachedPose.Functions=True
+AnimGraphNode_UseCachedPose.Tag=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Functions=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Tag=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=1
@@ -2265,6 +2288,11 @@ K2Node_InputAction.Input=True
 /Game/_Main/Widgets/MainWidget_W.MainWidget_W=0
 /Game/_Main/Widgets/BPI_CrosshairUI.BPI_CrosshairUI=0
 /Game/_Main/Widgets/Crosshair_HUD.Crosshair_HUD=0
+/Game/_Main/Zombie/Animations/zombie_death.zombie_death=0
+/Game/_Main/Zombie/Animations/zombie_dying.zombie_dying=0
+/Game/_Main/Zombie/Animations/zombie_dying_Montage.zombie_dying_Montage=0
+/Game/_Main/Zombie/Animations/Zombie_Reaction_Hit_mixamo_com.Zombie_Reaction_Hit_mixamo_com=0
+/Game/_Main/Zombie/Animations/Zombie_Reaction_Hit_mixamo_com_Montage.Zombie_Reaction_Hit_mixamo_com_Montage=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2357,7 +2385,7 @@ TimelineEnabledSnaps=MontageSection
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 BP_Zombie_C=BP_Zombie_C.TransformCommon.Transform,
-SkeletalMeshComponent=BP_Zombie_C.TransformCommon.Transform,
+SkeletalMeshComponent=
 CharacterMovementComponent=BP_Zombie_C.TransformCommon.Transform,
 K2Node_VariableGet=BP_Zombie_C.TransformCommon.Transform,
 K2Node_VariableSet=BP_Zombie_C.TransformCommon.Transform,
@@ -2392,16 +2420,16 @@ CrowdManager=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindi
 DataDrivenConsoleVariableSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 DebugCameraControllerSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 EnhancedInputDeveloperSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputModifierDeadZone=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputModifierResponseCurveExponential=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputModifierFOVScaling=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerDown=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerPressed=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerReleased=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerHold=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerHoldAndRelease=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerTap=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-InputTriggerPulse=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
+InputModifierDeadZone=
+InputModifierResponseCurveExponential=
+InputModifierFOVScaling=
+InputTriggerDown=
+InputTriggerPressed=
+InputTriggerReleased=
+InputTriggerHold=
+InputTriggerHoldAndRelease=
+InputTriggerTap=
+InputTriggerPulse=
 EnhancedInputEditorProjectSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 GarbageCollectionSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
@@ -2463,14 +2491,15 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettin
 PythonScriptPluginSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 ResonanceAudioSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 TakeRecorderProjectSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-MovieSceneTakeSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-TakeRecorderMicrophoneAudioSourceSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-MovieSceneAnimationTrackRecorderEditorSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
-TakeRecorderWorldSourceSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
+MovieSceneTakeSettings=
+TakeRecorderMicrophoneAudioSourceSettings=
+MovieSceneAnimationTrackRecorderEditorSettings=
+TakeRecorderWorldSourceSettings=
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.AimWidget,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.ActionMappings,
+BP_Pickup_Rifle_C=BP_Zombie_C.TransformCommon.Transform,
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2761,7 +2790,7 @@ Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -2780,6 +2809,11 @@ Image="\"Object.Appearance.Brush\" "
 Widget=
 Visual=
 InputSettings=
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+K2Node="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+EdGraphNode="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
